# fairworkflows

./: .coveragerc  .flake8  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  NOTICE  README.md  README.rst  config.py  conftest.py  generate_sample_workflow.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.ipynb  test_fairworkflows.ipynb  test_fairworkflows_notebook.sh  test_plex_builder.ipynb  test_plex_builder.py  test_toil.py
.github/workflows/: FAIRworkbench.yml  azure-devops-sync.yml  build.yml  fairworkflows.yml  pypi.yml
cli/: cli.py
core/: cwl.py  nanopub.py  project.py  pythongen.py  rdf.py  workflow.py
core/nanopub/: __init__.py  nanopub.py  wrapper.py
core/templates/: FairWorkflow.py  fair_step.py
demoflask/: __init__.py  demoflask.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/reference/: fairstep.rst  fairworkflow.rst  prov.rst
examples/: .gitignore  basic_workflow.py  demo-execute-method.ipynb  demo-notebook-injection-execution.ipynb  fairworkflows-quick-start.ipynb  manual_step_demo.ipynb  noodles_fw.ipynb  sparql_playground.ipynb  test_fairworkflows.ipynb  test_image_processing_wf_remzi.ipynb  test_image_processing_wf_tobias.ipynb  workflow-building-diagram.ipynb  workflow-test-tk.ipynb
examples/old/: workflow-test-tk.ipynb
fairworkflows/: README.md  __init__.py  config.py  cwl.py  cwl_cli.py  cwlstep.py  decorators.py  exceptions.py  fairdata.py  fairstep.py  fairvariable.py  fairwidgets.py  fairworkflow.py  inspect.py  linguistic_system.py  load.py  manual_assistant.py  manualstep.py  namespaces.py  nanopub.py  nanopub_wrapper.py  new.nanopub_wrapper.py  project.py  prov.py  pythongen.py  rdf.py  rdf_wrapper.py  requirements.txt  ro_crate.py  step.py  test.ipynb  test.sh  workflow.py  workflowhub.py  wrapper.py
fairworkflows/fairworkflows/: __init__.py  fairdata.py  fairwidgets.py  hello.py  hellowidget.py  nanopub.py  nanopub_wrapper.py  search.py  step.py  workflowhub.py
fairworkflows/manualassistant/: manual_assistant.py
fairworkflows/old/: fairworkflow.py
fairworkflows/templates/: fair_step.py  manualstep.html
jupyter-extension/: HelloFAIRWorld.ipynb  install_nbextension.sh
jupyter-extension/FAIRWorkflowsExtension/: README.md  description.yaml  main.js
manual_step/: README  manual.cwl  test_manual.sh  test_workflow.cwl
manual_step/manual/: manual.py
playground/: __init__.py  fairworkflow.py  test_fw.py
shacl/: plex-shapes.ttl
tests/: conftest.py  output.ttl  ro_crate_test.py  test.txt  test_cwl.py  test_cwl_cli.py  test_demoflask.py  test_fairstep.py  test_fairworkflow.py  test_get_cwl_logs.py  test_integration.py  test_lint.py  test_nanopub.py  test_nanopub_fetch.py  test_nanopub_search.py  test_nanopub_wrapper.py  test_project.py  test_rdf_wrapper.py  test_ro_crate.py  test_run_cwl_from_rocrate.py  test_workflowhub.py  test_workflowhub_fetch.py  test_workflowhub_search.py
tests/resources/: my_workflow.ttl  ro-crate-metadata.jsonld  sample_fairstep_nanopub.trig  test_flow.cwl  test_workflow.trig  test_workflow_excluding_steps.trig  test_workflow_including_steps.trig
tests/resources/test_crate/: ro-crate-metadata.jsonld  ro-crate-preview.html  test_workflow.cwl
workflow-cli/: cli.py  cwl.py  pythongen.py
workflow-cli/templates/: FairWorkflow.py
workflowRDF/: README  cleanup.sh  fairworkflow.py  test_fw.py
workflowRDF/manual_step/: README
